==> c1728p9/DAPLink/source/hic_hal/stm32/stm32f103xb/usbd_STM32F103.c <==
#include "RTL.h"
#include "rl_usb.h"
#include "usbreg.h"
#include "stm32f1xx.h"
#include "DAP_config.h"
#include "IO_Config.h"
#include "uart.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define USB_DBL_BUF_EP  0x0000
#define EP_BUF_ADDR     (sizeof(EP_BUF_DSCR) * (USBD_EP_NUM + 1))   /* 16*(4+1)Endpoint Buf Adr */

void USBD_Init (void)
{
    /* Select USBCLK source */
    RCC_USBCLKConfig(RCC_USBCLKSource_PLLCLK_1Div5);
    /* Enable USB clock */
    RCC->APB1ENR |= RCC_APB1ENR_USBEN;

    /* Enable USB Interrupts */
    USBD_IntrEna ();
    /* Set USB connect pin to low */
    USB_CONNECT_OFF();
}

void USBD_Connect (BOOL con)
{
    if (con)
    {
        CNTR = CNTR_FRES;               /* Force USB Reset                      */
        CNTR = 0;
        ISTR = 0;                       /* Clear Interrupt Status               */
        CNTR = CNTR_RESETM | CNTR_SUSPM | CNTR_WKUPM;   /* USB Interrupt Mask   */

        USB_CONNECT_ON();
    }
    else
    {
        CNTR = CNTR_FRES | CNTR_PDWN;   /* Switch Off USB Device              */
        USB_CONNECT_OFF();
    }
}

void USBD_Reset (void)
{
    /* Double Buffering is not yet supported    */

    ISTR = 0;   /* Clear Interrupt Status       */

    CNTR = CNTR_CTRM | CNTR_RESETM | CNTR_SUSPM | CNTR_WKUPM
#ifdef __RTX
            | ((USBD_RTX_DevTask    != 0) ? CNTR_ERRM   : 0)
            | ((USBD_RTX_DevTask    != 0) ? CNTR_PMAOVRM : 0)
            | ((USBD_RTX_DevTask    != 0) ? CNTR_SOFM   : 0)
            | ((USBD_RTX_DevTask    != 0) ? CNTR_ESOFM  : 0);
#else
            | ((USBD_P_Error_Event != 0) ? CNTR_ERRM    : 0)
            | ((USBD_P_Error_Event != 0) ? CNTR_PMAOVRM : 0)
            | ((USBD_P_SOF_Event    != 0) ? CNTR_SOFM   : 0)
            | ((USBD_P_SOF_Event    != 0) ? CNTR_ESOFM  : 0);
#endif

    FreeBufAddr = EP_BUF_ADDR;

    BTABLE = 0x00;  /* set BTABLE Address       */

    /* Setup Control Endpoint 0 */
    pBUF_DSCR->ADDR_TX = FreeBufAddr;
    FreeBufAddr += USBD_MAX_PACKET0;

    pBUF_DSCR->ADDR_RX = FreeBufAddr;
    FreeBufAddr += USBD_MAX_PACKET0;

    if (USBD_MAX_PACKET0 > 62)
    {
        pBUF_DSCR->COUNT_RX = ((USBD_MAX_PACKET0 << 5) - 1) | 0x8000;
    }
    else
    {
        pBUF_DSCR->COUNT_RX =   USBD_MAX_PACKET0 << 9;
    }
    EPxREG(0) = EP_CONTROL | EP_RX_VALID;

    DADDR = DADDR_EF | 0;   /* Enable USB Default Address   */
}

void USBD_Suspend (void)
{
    CNTR |= CNTR_FSUSP;     /* Force Suspend    */
    CNTR |= CNTR_LPMODE;    /* Low Power Mode   */
}

void USBD_WakeUp (void)
{
    CNTR &= ~CNTR_FSUSP;    /* Clear Suspend    */
}

void USBD_SetAddress (U32 adr, U32 setup)
{
    if (setup)
        return;
    DADDR = DADDR_EF | adr;
}

void USBD_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD)
{
    /* Double Buffering is not yet supported                                    */
    U32 num, val;

    num = pEPD->bEndpointAddress & 0x0F;

    val = pEPD->wMaxPacketSize;
    if (pEPD->bEndpointAddress & USB_ENDPOINT_DIRECTION_MASK)
    {
        (pBUF_DSCR + num)->ADDR_TX = FreeBufAddr;
        val = (val + 1) & ~1;
    }
    else
    {
        (pBUF_DSCR + num)->ADDR_RX = FreeBufAddr;
        if (val > 62)
        {
            val = (val + 31) & ~31;
            (pBUF_DSCR + num)->COUNT_RX = ((val << 5) - 1) | 0x8000;
        }
        else
        {
            val = (val + 1)  & ~1;
            (pBUF_DSCR + num)->COUNT_RX = val << 9;
        }
    }

    FreeBufAddr += val;

    switch (pEPD->bmAttributes & USB_ENDPOINT_TYPE_MASK)
    {
    case USB_ENDPOINT_TYPE_CONTROL:
        val = EP_CONTROL;
        break;
    case USB_ENDPOINT_TYPE_ISOCHRONOUS:
        val = EP_ISOCHRONOUS;
        break;
    case USB_ENDPOINT_TYPE_BULK:
        val = EP_BULK;
        if (USB_DBL_BUF_EP & (1 << num))
        {
            val |= EP_KIND;
        }
        break;
    case USB_ENDPOINT_TYPE_INTERRUPT:
        val = EP_INTERRUPT;
        break;
    }
    val |= num;
    EPxREG(num) = val;
}

void USBD_EnableEP (U32 EPNum)
{
    EP_Status(EPNum, EP_TX_NAK | EP_RX_VALID);  /* EP is able to receive */
}

void USBD_DisableEP (U32 EPNum)
{
    EP_Status(EPNum, EP_TX_DIS | EP_RX_DIS);
}

void USBD_ResetEP (U32 EPNum)
{
    EP_Reset(EPNum);
}

void USBD_SetStallEP (U32 EPNum)
{
    EP_Status(EPNum, EP_TX_STALL | EP_RX_STALL);
}

void USBD_ClrStallEP (U32 EPNum)
{
    EP_Reset(EPNum);    /* reset DTog Bits  */
    EP_Status(EPNum, EP_TX_VALID | EP_RX_VALID);
}

U32 USBD_ReadEP (U32 EPNum, U8 *pData, U32 size)
{
    /* Double Buffering is not yet supported    */
    U32 num, cnt, *pv, n;

    num = EPNum & 0x0F;

    pv  = (U32 *)(USB_PMA_ADDR + 2 * ((pBUF_DSCR + num)->ADDR_RX));
    cnt = (pBUF_DSCR + num)->COUNT_RX & EP_COUNT_MASK;
//  if(cnt > size)
//  {
//      cnt = size;
//  }
    for (n = 0; n < (cnt + 1) / 2; n++)
    {
        *((__packed U16 *)pData) = *pv++;
        pData += 2;
    }
    EP_Status(EPNum, EP_RX_VALID);

    return (cnt);
}

U32 USBD_WriteEP (U32 EPNum, U8 *pData, U32 cnt)
{
    /* Double Buffering is not yet supported */
    U32 num, *pv, n;
    U16 statusEP;

    num = EPNum & 0x0F;

    pv  = (U32 *)(USB_PMA_ADDR + 2 * ((pBUF_DSCR + num)->ADDR_TX));
    for (n = 0; n < (cnt + 1) / 2; n++)
    {
        *pv++ = *((__packed U16 *)pData);
        pData += 2;
    }
    (pBUF_DSCR + num)->COUNT_TX = cnt;

    statusEP = EPxREG(num);
    if ((statusEP & EP_STAT_TX) != EP_TX_STALL)
    {   /* do not make EP valid if stalled */
        EP_Status(EPNum, EP_TX_VALID);
    }

    return (cnt);
}

U32 USBD_GetFrame (void)
{
    return (FNR & FNR_FN);
}

void USBD_Handler(void)
{
    U32 istr, num, val;

    istr = ISTR;

    if (istr & ISTR_RESET)
    {   /* USB Reset Request */
        USBD_Reset();
        usbd_reset_core();
#ifdef __RTX
        if (USBD_RTX_DevTask)
        {
            isr_evt_set(USBD_EVT_RESET, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Reset_Event)
        {
            USBD_P_Reset_Event();
        }
#endif
        ISTR = ~ISTR_RESET;
    }

    if (istr & ISTR_SUSP)
    {   /* USB Suspend Request */
        USBD_Suspend();
#ifdef __RTX
        if (USBD_RTX_DevTask)
        {
            isr_evt_set(USBD_EVT_SUSPEND, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Suspend_Event)
        {
            USBD_P_Suspend_Event();
        }
#endif
        ISTR = ~ISTR_SUSP;
    }

    if (istr & ISTR_WKUP)
    {   /* USB Wakeup */
        USBD_WakeUp();
#ifdef __RTX
        if (USBD_RTX_DevTask)
        {
            isr_evt_set(USBD_EVT_RESUME,  USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Resume_Event)
        {
            USBD_P_Resume_Event();
        }
#endif
        ISTR = ~ISTR_WKUP;
    }

    if (istr & ISTR_SOF)
    {   /* Start of Frame */
#ifdef __RTX
        if (USBD_RTX_DevTask)
        {
            isr_evt_set(USBD_EVT_SOF, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_SOF_Event)
        {
            USBD_P_SOF_Event();
        }
#endif
        ISTR = ~ISTR_SOF;
    }

    if (istr & ISTR_PMAOVR)
    {
#ifdef __RTX
        LastError = 2;
        if (USBD_RTX_DevTask)
        {   /* PMA Over/underrun */
            isr_evt_set(USBD_EVT_ERROR, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Error_Event)
        {
            USBD_P_Error_Event(2);
        }
#endif
        ISTR = ~ISTR_PMAOVR;
    }

    if (istr & ISTR_ERR)
    {   /* Error: No Answer, CRC Error, Bit Stuff Error, Frame Format Error */
#ifdef __RTX
        LastError = 1;
        if (USBD_RTX_DevTask)
        {
            isr_evt_set(USBD_EVT_ERROR, USBD_RTX_DevTask);
        }
#else
        if (USBD_P_Error_Event)
        {
            USBD_P_Error_Event(1);
        }
#endif
        ISTR = ~ISTR_ERR;
    }

    while ((istr = ISTR) & ISTR_CTR)
    {   /* Endpoint Interrupts */
        ISTR = ~ISTR_CTR;

        num = istr & ISTR_EP_ID;

        val = EPxREG(num);
        if (val & EP_CTR_RX)
        {
            EPxREG(num) = val & ~EP_CTR_RX & EP_MASK;
#ifdef __RTX
            if (USBD_RTX_EPTask[num])
            {
                isr_evt_set((val & EP_SETUP) ? USBD_EVT_SETUP : USBD_EVT_OUT, USBD_RTX_EPTask[num]);
            }
#else
            if (USBD_P_EP[num])
            {
                USBD_P_EP[num]((val & EP_SETUP) ? USBD_EVT_SETUP : USBD_EVT_OUT);
            }
#endif
        }
        if (val & EP_CTR_TX)
        {
            EPxREG(num) = val & ~EP_CTR_TX & EP_MASK;
#ifdef __RTX
            if (USBD_RTX_EPTask[num])
            {
                isr_evt_set(USBD_EVT_IN,  USBD_RTX_EPTask[num]);
            }
#else
            if (USBD_P_EP[num])
            {
                USBD_P_EP[num](USBD_EVT_IN);
            }
#endif
        }
    }
    NVIC_EnableIRQ(USB_LP_CAN1_RX0_IRQn);
}
